# walmart-ai-portfolio

./: .gitignore  README.md
merch-content-enrichment-crewai/: .env.example  README.md
merch-forecast-comparator-langchain/: .env.example  README.md
merch-planogram-helper-langchain/: .env.example  README.md  requirements.txt
merch-promo-optimizer-crewai/: .env.example  README.md
merch-returns-analyzer-vanilla/: .env.example  LICENSE  README.md  requirements.txt
merch-shelf-gap-detector-langgraph/: .env.example  .pre-commit-config.yaml  README.md
merch-vendor-scorecard-langgraph/: .env.example  README.md
pm-backlog-prioritizer-langgraph/: .env.example  README.md  docker-compose.yml
pm-experiment-copilot-vanilla/: .env.example  README.md
pm-okr-advisor-langchain/: .env.example  README.md
pm-prd-writer-crewai/: .env.example  README.md  requirements.txt
pm-risk-register-vanilla/: .env.example  README.md
pm-stakeholder-qa-langchain/: .env.example  README.md
retail-a11y-review-bot/: .env.example  README.md
retail-assortment-agent-langgraph/: .env.example  .gitignore  README.md  requirements.txt
retail-catalog-normalizer-crewai/: .env.example  README.md
retail-customer-inquiry-triage-fastapi/: .env.example  README.md  pyproject.toml
retail-customer-inquiry-triage-fastapi/app/: main.py.bak
retail-customer-inquiry-triage-fastapi/eval/: run.py
retail-customer-inquiry-triage-fastapi/k8s/: deployment.yaml
retail-pricing-simulator-langchain/: .env.example  README.md  normalize.ps1  requirements.txt
scripts/: ci_minify_remaining.ps1  (+7 more)
(+65 files in other folders)
